# ExamWebBrowser

./: .gitignore  ExamWebBrowser.nsi  ExamWebBrowser.txt  README.md  TODO.md  build_Linux.sh  distribution.bat  distribution.sh  distribution_Linux.sh  distribution_Windows.bat
.github/workflows/: release.yml
images/: ScreenShot.xcf
moodle-plugin/quizaccess_ewb/: rule.php  version.php
moodle-plugin/quizaccess_ewb/db/: access.php  install.xml
moodle-plugin/quizaccess_ewb/lang/en/: quizaccess_ewb.php
moodle-plugin/quizaccess_ewb/lang/fr/: quizaccess_ewb.php
packaging/linux/: build-deb.sh  examwebbrowser.desktop
src/: BrowserWindow.qml  CMakeLists.txt  CMakeLists.txt.user.1a421d6  CMakeLists.txt.user.e56b138  DownloadView.qml  Info.cmake.macos.plist  WebAuthDialog.qml  clickablebutton.cpp  clickablebutton.h  clickablelabel.cpp  clickablelabel.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  network_client.cpp  network_client.h  network_server.cpp  network_server.h  pushbutton.cpp  pushbutton.h  quicknanobrowser.exe.manifest  quicknanobrowser.pro  quickwindow.cpp  quickwindow.h  quickwindow.qml  requestinterceptor.cpp  requestinterceptor.h  resources.qrc  rightclickbutton.cpp  rightclickbutton.h  settings.cpp  settings.h  toolbar.cpp  toolbar.h  util.h  utils.h  webexamod.pro
src/doc/src/: quicknanobrowser.qdoc
